[tool.poetry]
name = "cuprates_transport"
version = "0.1.0"
description = "Computes Boltzmann transport from a tight binding model"
authors = ["Gaël Grissonnanche <gael.phys@gmail.com>"]
license = "gpl-3.0"

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
scipy = "^1.6.0"
matplotlib = "^3.3.3"
numba = "^0.52.0"
lmfit = "^1.0.1"
tqdm = "^4.56.0"
scikit-image = "^0.18.1"
numpy = "^1.19.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
